# ledger-cli-llm

./: README.md  pyproject.toml
src/ledger_cli_llm/: cli.py  parser.py
tests/: test_parser.py
