[project]
name = "ledger-cli-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "itsjohncs", email = "johnsullivan.pem@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ledger-cli-llm = "ledger_cli_llm:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
